# SKILLS

./: README.md
architect-workflow/: SKILL.md
architect-workflow/references/: contract-template.md
code-companion/: SKILL.md
code-workflow/: SKILL.md
cpp-init/: SKILL.md
cpp-init/assets/: .clang-format  .clang-tidy  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  build.sh  run_tests.sh  tests_CMakeLists.txt
cpp-init/assets/.github/ISSUE_TEMPLATE/: bug_report.yml
cpp-init/assets/.github/workflows/: ci.yml
cpp-init/references/: conventions.md
cpp-init/scripts/: init_cpp_project.py
developer-workflow/: SKILL.md
explain-code/: SKILL.md
feat-workflow/: SKILL.md
fix-workflow/: SKILL.md
grill-me/: SKILL.md
humanizer/: SKILL.md
resume-proj-interview/: SKILL.md
review-workflow/: SKILL.md
review-workflow/references/: review-criteria.md
reviewer-workflow/: SKILL.md
reviewer-workflow/references/: cpp-review-guide.md
skill-creator/: SKILL.md
strategist-workflow/: SKILL.md
strategist-workflow/references/: roadmap-template.md
tester-workflow/: SKILL.md
writing-workflow/: SKILL.md
